# encryptedML

./: .gitignore  README.md  linear_regression_model.csv  ring.ipynb  train.ipynb
seal/: CMakeLists.txt
seal/src/: example.cpp  example.h  interface.cpp  interface.h  linear_regression.cpp  linear_regression.h  main.cpp
